RTW88: `upstream wireless`
RTW88 variable now pulls from https://github.com/lwfinger/rtw88
RTW88_DEVEL applies patches on top of the original source

Unless you know what you're doing don't bother using RTW88_DEVEL

Signed-off-by: Patrick Yavitz <pyavitz@xxxxx.com>

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -2,8 +2,8 @@
 
 source lib/function/config
 # builder and profile versions
-BUILDER="6.10"
-PROFILE="1.3"
+BUILDER="6.11"
+PROFILE="1.4"
 
 # depends
 if [[ `command -v curl` ]]; then :; else sudo apt install curl; fi
@@ -26,6 +26,7 @@ COMPILER="gcc"
 CCACHE="1"
 NETWORKMANAGER="1"
 RTW88="1"
+RTW88_DEVEL="0"
 USERACCT="0"
 USER_PKGS="htop libsensors-dev rsyslog"
 LOCALE="en_US.UTF-8"
@@ -124,6 +125,7 @@ echo 'CFLAGS=""' >> tmp0
 echo 'KBUSER="playboy"' >> tmp0
 echo 'KBHOST="penguin"' >> tmp0
 echo "RTW88=${RTW88}" >> tmp0
+echo "RTW88_DEVEL=${RTW88_DEVEL}" >> tmp0
 echo LOCALE='"'${LOCALE}'"' >> tmp0
 echo LOCALE_LC_ALL='"'${LOCALE_LC_ALL}'"' >> tmp0
 echo TIMEZONE='"'${TIMEZONE}'"' >> tmp0
@@ -156,8 +158,8 @@ sed -i '17i### CUSTOM' userdata.txt
 sed -i '29i### COMPILER TUNING' userdata.txt
 sed -i '32i### WHOAMI AND HOST' userdata.txt
 sed -i '35i### EXTRA WIRELESS' userdata.txt
-sed -i '37i### LOCALES TIMEZONE AND NAMESERVERS' userdata.txt
-sed -i '43i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+sed -i '38i### LOCALES TIMEZONE AND NAMESERVERS' userdata.txt
+sed -i '44i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # custom dot txt
 if [[ -f "custom.txt" ]]; then
@@ -190,7 +192,7 @@ clear -x
 if [[ -f "userdata.txt" ]]; then
 	sed -i 's/=0/="0"/g' userdata.txt
 	sed -i 's/=1/="1"/g' userdata.txt
-	sed -i '5G;9G;16G;28G;31G;34G;36G;42G' userdata.txt
+	sed -i '5G;9G;16G;28G;31G;34G;37G;43G' userdata.txt
 	echo -e "userdata.txt file created."
 	exit 0
 fi
