--- a/lib/function/config
+++ b/lib/function/config
@@ -88,6 +88,7 @@ cat <<EOF > "profile.txt"
 #CCACHE="$CCACHE"
 #NETWORKMANAGER="$NETWORKMANAGER"
 #RTW88="$RTW88"
+#RTW88_DEVEL="$RTW88_DEVEL"
 #USERACCT="$USERACCT"
 #USER_PKGS="$USER_PKGS"
 #LOCALE="$LOCALE"
