--- a/files/useracct/useraccount.service
+++ b/files/useracct/useraccount.service
@@ -5,14 +5,11 @@ Before=sshd.service systemd-logind.service getty@tty1.service credentials.servic
 
 [Service]
 Type=oneshot
-TTYPath=/dev/tty13
-ExecStartPre=/usr/bin/chvt 13
 ExecStart=/usr/local/sbin/useraccount
-ExecStartPost=/usr/bin/chvt 1
-TimeoutStartSec=0
-StandardInput=tty
-TTYVHangup=yes
-TTYVTDisallocate=yes
+TimeoutSec=0
+#RemainAfterExit=yes
+StandardOutput=journal+console
+StandardError=journal+console
 
 [Install]
 WantedBy=default.target
