--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -1620,8 +1620,10 @@ CONFIG_XFS_FS=y
 CONFIG_BTRFS_FS=y
 CONFIG_BTRFS_FS_POSIX_ACL=y
 CONFIG_F2FS_FS=y
-# CONFIG_F2FS_FS_XATTR is not set
+CONFIG_F2FS_FS_SECURITY=y
 CONFIG_F2FS_CHECK_FS=y
+CONFIG_F2FS_FS_COMPRESSION=y
+CONFIG_EXPORTFS_BLOCK_OPS=y
 CONFIG_FANOTIFY=y
 CONFIG_AUTOFS4_FS=y
 CONFIG_AUTOFS_FS=y
