--- a/defconfig/k1-6.1.15_defconfig
+++ b/defconfig/k1-6.1.15_defconfig
@@ -620,6 +620,7 @@ CONFIG_TOUCHSCREEN_GOODIX=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_SPACEMIT_POWERKEY=y
+CONFIG_HALL_SENSOR_AS1911=y
 # CONFIG_LEGACY_PTYS is not set
 CONFIG_SERIAL_EARLYCON_RISCV_SBI=y
 CONFIG_SERIAL_PXA=y
