--- a/defconfig/k1_defconfig
+++ b/defconfig/k1_defconfig
@@ -962,6 +962,7 @@ CONFIG_F2FS_FS_COMPRESSION=y
 CONFIG_EXPORTFS_BLOCK_OPS=y
 CONFIG_FANOTIFY=y
 CONFIG_AUTOFS4_FS=y
+CONFIG_AUTOFS_FS=y
 CONFIG_FUSE_FS=m
 CONFIG_OVERLAY_FS=y
 CONFIG_NETFS_STATS=y
