--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -651,7 +651,8 @@ CONFIG_USB_NET_MCS7830=m
 CONFIG_USB_HSO=m
 CONFIG_USB_IPHETH=m
 # CONFIG_WLAN_VENDOR_ADMTEK is not set
-# CONFIG_WLAN_VENDOR_ATH is not set
+CONFIG_ATH10K=m
+CONFIG_ATH10K_SDIO=m
 # CONFIG_WLAN_VENDOR_ATMEL is not set
 CONFIG_B43=m
 CONFIG_B43_SDIO=y
