--- a/patches/overlays/arm64/meson-g12b-bananapi-cm4-wifi-freq-200mhz.dts
+++ b/patches/overlays/arm64/meson-g12b-bananapi-cm4-wifi-freq-200mhz.dts
@@ -7,7 +7,7 @@
 	fragment@0 {
 		target-path = "/";
 		__overlay__ {
-			sdio_pwrseq {
+			sdio-pwrseq {
 				post-power-on-delay-ms = <200>;
 			};
 		};
