--- a/patches/overlays/arm64/Makefile
+++ b/patches/overlays/arm64/Makefile
@@ -64,6 +64,7 @@ dtbo-$(CONFIG_ARCH_SUNXI) += \
 	sunxi-h616-spi1-cs0-cs1-spidev.dtbo \
 	sunxi-h616-spi1-cs0-spidev.dtbo \
 	sunxi-h616-spi1-cs1-spidev.dtbo \
+	sunxi-h618-bananapi-m4-wifi-bt.dtbo \
 	sunxi-usb-host-mode.dtbo \
 	sunxi-usb-otg-mode.dtbo
 
