BananaPi BPI-M4-Zero: `SDIO WiFi and Bluetooth support`
Rev2

If you're getting the following dmesg errors:
https://lore.kernel.org/all/99977c876429f33d8dbab18d7c3e71590585263b.camel@sipsolutions.net/T/

Add to your commandline: cfg80211.ieee80211_regdom=US

Replacing US with whatever your country code is.

Signed-off-by: Patrick Yavitz <pyavitz@gmail.com>

--- a/patches/overlays/arm64/sunxi-h618-bananapi-m4-sdio-wifi-bt.dts
+++ b/patches/overlays/arm64/sunxi-h618-bananapi-m4-sdio-wifi-bt.dts
@@ -33,14 +33,12 @@
 		__overlay__ {
 			bluetooth {
 				compatible = "brcm,bcm43438-bt";
-				clocks = <&rtc CLK_OSC32K_FANOUT>;
-				clock-names = "lpo";
+				max-speed = <1500000>;
 				device-wakeup-gpios = <&pio 6 17 GPIO_ACTIVE_HIGH>;
 				host-wakeup-gpios = <&pio 6 16 GPIO_ACTIVE_HIGH>;
 				shutdown-gpios = <&pio 6 19 GPIO_ACTIVE_HIGH>;
-				max-speed = <1500000>;
-				vbat-supply = <&reg_vcc3v3>;
-				vddio-supply = <&reg_vcc1v8>;
+				vbat-supply = <&reg_dldo1>;
+				vddio-supply = <&reg_aldo1>;
 			};
 		};
 	};
