--- a/patches/overlays/arm64/sunxi-h618-bananapi-m4-sdio-wifi-bt.dts
+++ b/patches/overlays/arm64/sunxi-h618-bananapi-m4-sdio-wifi-bt.dts
@@ -33,10 +33,10 @@
 		__overlay__ {
 			bluetooth {
 				compatible = "brcm,bcm43438-bt";
-				max-speed = <1500000>;
+				reset-gpios = <&pio 6 16 GPIO_ACTIVE_HIGH>;
 				device-wakeup-gpios = <&pio 6 17 GPIO_ACTIVE_HIGH>;
-				host-wakeup-gpios = <&pio 6 16 GPIO_ACTIVE_HIGH>;
 				shutdown-gpios = <&pio 6 19 GPIO_ACTIVE_HIGH>;
+				max-speed = <1500000>;
 				vbat-supply = <&reg_dldo1>;
 				vddio-supply = <&reg_aldo1>;
 			};
