BananaPi BPI-M4-Zero: `add WiFi regulators and fixup BT overlay`
Signed-off-by: Patrick Yavitz <pyavitz@gmail.com>

--- a/patches/overlays/arm64/sunxi-h618-bananapi-m4-sdio-wifi-bt.dts
+++ b/patches/overlays/arm64/sunxi-h618-bananapi-m4-sdio-wifi-bt.dts
@@ -33,12 +33,14 @@
 		__overlay__ {
 			bluetooth {
 				compatible = "brcm,bcm43438-bt";
+				clocks = <&rtc CLK_OSC32K_FANOUT>;
+				clock-names = "lpo";
 				host-wakeup-gpios = <&pio 6 16 GPIO_ACTIVE_HIGH>;
 				device-wakeup-gpios = <&pio 6 17 GPIO_ACTIVE_HIGH>;
 				shutdown-gpios = <&pio 6 19 GPIO_ACTIVE_HIGH>;
 				max-speed = <1500000>;
-				vbat-supply = <&reg_dldo1>;
-				vddio-supply = <&reg_aldo1>;
+				vbat-supply = <&reg_vcc33_wifi>;
+				vddio-supply = <&reg_vcc_wifi_io>;
 			};
 		};
 	};
