BananaPi BPI-M4-Zero: `partial DTS re-write`
The goal was to stabilze bluetooth:
dmesg | grep hci0:
[    8.463639] Bluetooth: hci0: BCM: chip id 107
[    8.465833] Bluetooth: hci0: BCM: features 0x2f
[    8.488949] Bluetooth: hci0: BCM4345C0
[    8.488974] Bluetooth: hci0: BCM4345C0 (003.001.025) build 0000
[    8.494014] Bluetooth: hci0: BCM4345C0 'brcm/BCM4345C0.sinovoip,bpi-m4-zero.hcd' Patch
[   14.228750] Bluetooth: hci0: BCM: features 0x2f
[   14.231564] Bluetooth: hci0: BCM4345C0 UART 37.4 MHz wlbga_ref_iLNA_iTR_eLG 0162
[   14.231574] Bluetooth: hci0: BCM4345C0 (003.001.025) build 0000

Signed-off-by: Patrick Yavitz <pyavitz@gmail.com>

--- a/patches/overlays/arm64/sunxi-h618-bananapi-m4-sdio-wifi-bt.dts
+++ b/patches/overlays/arm64/sunxi-h618-bananapi-m4-sdio-wifi-bt.dts
@@ -1,14 +1,6 @@
 /dts-v1/;
 /plugin/;
 
-#include <dt-bindings/clock/sun50i-h616-ccu.h>
-#include <dt-bindings/clock/sun50i-h6-r-ccu.h>
-#include <dt-bindings/gpio/gpio.h>
-#include <dt-bindings/interrupt-controller/arm-gic.h>
-#include <dt-bindings/clock/sun6i-rtc.h>
-#include <dt-bindings/reset/sun50i-h616-ccu.h>
-#include <dt-bindings/reset/sun50i-h6-r-ccu.h>
-
 / {
 	compatible = "sinovoip,bpi-m4-zero", "allwinner,sun50i-h618";
 
@@ -31,15 +23,7 @@
 	fragment@2 {
 		target = <&uart1>;
 		__overlay__ {
-			bluetooth {
-				compatible = "brcm,bcm43438-bt";
-				host-wakeup-gpios = <&pio 6 16 GPIO_ACTIVE_HIGH>;
-				device-wakeup-gpios = <&pio 6 17 GPIO_ACTIVE_HIGH>;
-				shutdown-gpios = <&pio 6 19 GPIO_ACTIVE_HIGH>;
-				max-speed = <1500000>;
-				vbat-supply = <&reg_dldo1>;
-				vddio-supply = <&reg_aldo1>;
-			};
+			status = "okay";
 		};
 	};
 };
