defconfig: k1_defconfig: `add CONFIG_IIO`
Signed-off-by: Patrick Yavitz <pyavitz@gmail.com>

--- a/defconfig/k1_defconfig
+++ b/defconfig/k1_defconfig
@@ -936,6 +936,30 @@ CONFIG_SPACEMIT_V2D=y
 CONFIG_SPACEMIT_RFKILL=y
 CONFIG_EXTCON_USB_K1XCI=y
 CONFIG_EXTCON_USB_GPIO=y
+CONFIG_IIO=y
+CONFIG_IIO_BUFFER_CB=m
+CONFIG_IIO_BUFFER_DMAENGINE=m
+CONFIG_IIO_BUFFER_HW_CONSUMER=m
+CONFIG_IIO_SW_DEVICE=m
+CONFIG_IIO_SW_TRIGGER=m
+CONFIG_IIO_TRIGGERED_EVENT=m
+CONFIG_SPACEMIT_P1_ADC=y
+CONFIG_IIO_RESCALE=m
+CONFIG_ADMV8818=m
+CONFIG_AD9523=m
+CONFIG_ADF4350=m
+CONFIG_ADF4371=m
+CONFIG_ADF4377=m
+CONFIG_ADMV1013=m
+CONFIG_ADMV1014=m
+CONFIG_ADMV4420=m
+CONFIG_ADRF6780=m
+CONFIG_AFE4403=m
+CONFIG_AFE4404=m
+CONFIG_MAX30100=m
+CONFIG_MAX30102=m
+CONFIG_IIO_MUX=m
+CONFIG_IIO_SYSFS_TRIGGER=m
 CONFIG_PWM=y
 CONFIG_PWM_PXA=y
 CONFIG_RESET_CONTROLLER=y
