--- a/patches/wireless/rtw88/Kconfig
+++ b/patches/wireless/rtw88/Kconfig
@@ -23,8 +23,16 @@ config RTW88_SDIO
 config RTW88_USB
 	tristate
 
+config RTW88_88XXA
+	tristate
+
 config RTW88_8821A
 	tristate
+	select RTW88_88XXA
+
+config RTW88_8812A
+	tristate
+	select RTW88_88XXA
 
 config RTW88_8822B
 	tristate
@@ -169,6 +177,30 @@ config RTW88_8723DU
 
 	  802.11n USB wireless network adapter
 
+config RTW88_8812AU
+	tristate "Realtek 8812AU USB wireless network adapter"
+	depends on USB
+	select RTW88_CORE
+	select RTW88_USB
+	select RTW88_8812A
+	default m
+	help
+	  Select this option will enable support for 8812AU chipset
+
+	  802.11ac USB wireless network adapter
+
+config RTW88_8821AU
+	tristate "Realtek 8821AU USB wireless network adapter"
+	depends on USB
+	select RTW88_CORE
+	select RTW88_USB
+	select RTW88_8821A
+	default m
+	help
+	  Select this option will enable support for 8821AU chipset
+
+	  802.11ac USB wireless network adapter
+
 config RTW88_8821CE
 	tristate "Realtek 8821CE PCI wireless network adapter"
 	depends on PCI
@@ -199,30 +231,6 @@ config RTW88_8821CU
 	select RTW88_CORE
 	select RTW88_USB
 	select RTW88_8821C
-	default m
-	help
-	  Select this option will enable support for 8821CU chipset
-
-	  802.11ac USB wireless network adapter
-
-config RTW88_8812AU
-	tristate "Realtek 8812AU USB wireless network adapter"
-	depends on USB
-	select RTW88_CORE
-	select RTW88_USB
-	select RTW88_8821A
-	default m
-	help
-	  Select this option will enable support for 8821CU chipset
-
-	  802.11ac USB wireless network adapter
-
-config RTW88_8821AU
-	tristate "Realtek 8821AU USB wireless network adapter"
-	depends on USB
-	select RTW88_CORE
-	select RTW88_USB
-	select RTW88_8821A
 	default m
 	help
 	  Select this option will enable support for 8821CU chipset
