--- a/patches/wireless/rtw88/Makefile
+++ b/patches/wireless/rtw88/Makefile
@@ -20,14 +20,20 @@ rtw88_core-y += main.o \
 
 rtw88_core-$(CONFIG_PM) += wow.o
 
-obj-$(CONFIG_RTW88_8821A)	+= rtw_8821a.o
-rtw_8821a-objs			:= rtw8821a.o rtw8821a_table.o rtw8812a_table.o
+obj-$(CONFIG_RTW88_88XXA)	+= rtw88_88xxa.o
+rtw88_88xxa-objs		:= rtw88xxa.o
 
-obj-$(CONFIG_RTW88_8821AU)	+= rtw_8821au.o
-rtw_8821au-objs			:= rtw8821au.o
+obj-$(CONFIG_RTW88_8821A)	+= rtw88_8821a.o
+rtw88_8821a-objs		:= rtw8821a.o rtw8821a_table.o
 
-obj-$(CONFIG_RTW88_8812AU)	+= rtw_8812au.o
-rtw_8812au-objs			:= rtw8812au.o
+obj-$(CONFIG_RTW88_8812A)	+= rtw88_8812a.o
+rtw88_8812a-objs		:= rtw8812a.o rtw8812a_table.o
+
+obj-$(CONFIG_RTW88_8821AU)	+= rtw88_8821au.o
+rtw88_8821au-objs		:= rtw8821au.o
+
+obj-$(CONFIG_RTW88_8812AU)	+= rtw88_8812au.o
+rtw88_8812au-objs		:= rtw8812au.o
 
 obj-$(CONFIG_RTW88_8822B)	+= rtw88_8822b.o
 rtw88_8822b-objs		:= rtw8822b.o rtw8822b_table.o
